tests/type_check/control_flow/switch_enum_non_enum_place.err.expected
error: at 4:13: [TC-SwitchOnNonEnum] In function 'f', block 'entry': switchEnum place must be an enum type, found i64
   |
 4 |             switchEnum(n) [A: end]
   |             ^^^^^^^^^^^^^^^^^^^^^^
