tests/type_check/control_flow/switch_enum_non_enum_place.sim

        fn f(n: i64) {
            entry:
            switchEnum(n) [A: end]
            end:
            return
        }
        